--- a/jupyter-local/notebooks/postgres_snapshot.ipynb
+++ b/jupyter-local/notebooks/postgres_snapshot.ipynb
@@ -191,7 +191,7 @@
    "outputs": [],
    "source": [
     "# please write your query here\n",
-    "query = \"SELECT c.id, c.first_name, c.last_name, sum(p.weight) as total_weight FROM customers c LEFT OUTER JOIN orders o on c.id = o.purchaser LEFT OUTER JOIN products p on o.product_id = p.id GROUP BY c.id, c.first_name, c.last_name\"\n",
+    "query = \"SELECT c.id, c.first_name, c.last_name, sum(p.weight) as total_weight, now() as load_dttm FROM customers c LEFT OUTER JOIN orders o on c.id = o.purchaser LEFT OUTER JOIN products p on o.product_id = p.id GROUP BY c.id, c.first_name, c.last_name\"\n",
     "result = spark.sql(query)\n",
     "result.write.format(\"parquet\").save(\"/home/jovyan/weight_report\")"
    ]
@@ -205,14 +205,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----+----------+---------+------------+\n",
-      "|  id|first_name|last_name|total_weight|\n",
-      "+----+----------+---------+------------+\n",
-      "|1003|    Edward|   Walker|         5.3|\n",
-      "|1002|    George|   Bailey|       1.875|\n",
-      "|1001|     Sally|   Thomas|         8.1|\n",
-      "|1004|      Anne|Kretchmar|        null|\n",
-      "+----+----------+---------+------------+\n",
+      "+----+----------+---------+------------+--------------------+\n",
+      "|  id|first_name|last_name|total_weight|           load_dttm|\n",
+      "+----+----------+---------+------------+--------------------+\n",
+      "|1003|    Edward|   Walker|         5.3|2020-02-23 12:20:...|\n",
+      "|1002|    George|   Bailey|       1.875|2020-02-23 12:20:...|\n",
+      "|1001|     Sally|   Thomas|         8.1|2020-02-23 12:20:...|\n",
+      "|1004|      Anne|Kretchmar|        null|2020-02-23 12:20:...|\n",
+      "+----+----------+---------+------------+--------------------+\n",
       "\n"
      ]
     }
