--- a/jupyter-local/notebooks/postgres_snapshot.ipynb
+++ b/jupyter-local/notebooks/postgres_snapshot.ipynb
@@ -191,7 +191,7 @@
    "outputs": [],
    "source": [
     "# please write your query here\n",
-    "query = \"SELECT c.id, c.first_name, c.last_name, sum(p.weight) as total_weight, now() as load_dttm FROM customers c LEFT OUTER JOIN orders o on c.id = o.purchaser LEFT OUTER JOIN products p on o.product_id = p.id GROUP BY c.id, c.first_name, c.last_name\"\n",
+    "query = \"SELECT c.id, c.first_name, c.last_name, sum(p.weight) as total_weight, now() as load_dttm FROM customers c LEFT OUTER JOIN orders o on c.id = o.purchaser LEFT OUTER JOIN products p on o.product_id = p.id WHERE c.id <= 1005 GROUP BY c.id, c.first_name, c.last_name\"\n",
     "result = spark.sql(query)\n",
     "result.write.format(\"parquet\").save(\"/home/jovyan/weight_report\")"
    ]
